--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
-venv/
+# Python bytecode
 __pycache__/
-*.pyc
-*.sqlite3
-.env
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+.env/
+*.env
+
+# Django stuff:
 *.log
+*.pot
+*.pyc
+db.sqlite3
+db.sqlite3-journal
+
+# VSCode / PyCharm
+.vscode/
+.idea/
+
+# Static & media files
+staticfiles/
+media/
+
+# Cache
+*.cache
+*.egg-info/
+dist/
+build/
+
+# OS generated files
+.DS_Store
+Thumbs.db
